Fix expanded images being too small

--- a/src/style/Card.scss
+++ b/src/style/Card.scss
@@ -47,6 +47,7 @@
     img {
       max-width: 90%;
       max-height: 90%;
+      height: auto;
     }
   }
 
